--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 theme: jekyll-theme-cayman
-title: "Thomas J. Taylor"
+title: Thomas J. Taylor
 description: Bioinformatics and Biomedical Data Analytics Tools
 github:
   repository_url: https://github.com/thomasjtaylor
 plugins:
-  - jekyll-twitter-plugin
+  - jekyll-seo-tag
+  - jekyll-sitemap
